--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flag</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="shortcut icon" href="images/bangladesh-bangladeshi-round-circle-country-flag-vector-40957597.jpg" type="image/x-icon">
 </head>
 <body>
     <section class="main-container">
